--- a/frontend/src/components/Stock.css
+++ b/frontend/src/components/Stock.css
@@ -1,8 +1,37 @@
 .actions {
   display: flex;
   justify-content: space-around;
+  margin-top: 3px
 }
 
 .actions svg{
   cursor: pointer;
+}
+
+th {
+  width: 10%;
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px
+}
+
+.logout {
+  margin-left: auto;
+}
+
+.save {
+  border-width: thin;
+  margin-left: 10px;
+  flex: 1;
+}
+
+.quantity {
+  display: flex;
+}
+
+.input {
+  flex: 3;
 }
