--- a/frontend/src/components/Dashboard.module.css
+++ b/frontend/src/components/Dashboard.module.css
@@ -1,3 +1,4 @@
+/* .welcome is not used currently as it has been replaced by a react bootstrap font */
 .welcome {
   display: flex;
   align-items: center;
@@ -6,4 +7,5 @@
 
 .logout {
   margin-left: auto;
+  margin-right: 1rem;
 }
