--- a/frontend/src/components/Line.module.css
+++ b/frontend/src/components/Line.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 80vh; /* Adjust the height based on your needs */
+  color: white;
 }
 
 .pContainer {
@@ -25,6 +26,14 @@
 
 .span {
   vertical-align: middle;
+}
+
+.wallpaper {
+  background: url('./stock_image.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 100vh; /* Adjust as needed */
 }
 
 
