--- a/frontend/src/components/News.module.css
+++ b/frontend/src/components/News.module.css
@@ -4,3 +4,12 @@
   align-items: center;
   height: 80vh; /* Adjust the height based on your needs */
 }
+
+.wallpaper {
+  background: url('./stock_image.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh; /* Set the container height to the viewport height */
+  overflow-y: scroll; /* Enable vertical scrolling within the container */
+}
