--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -1,11 +1,11 @@
-/* .welcome is not used currently as it has been replaced by a react bootstrap font */
+.navbar {
+  width: 100vw;
+}
+
 .welcome {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px
+  margin-left: 2rem;
 }
 
 .logout {
-  margin-left: auto;
-  margin-right: 1rem;
+  margin-right: 2rem;
 }
