--- a/frontend/src/components/PlaceholderCandlestick.module.css
+++ b/frontend/src/components/PlaceholderCandlestick.module.css
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   height: 500px;
+  margin-bottom: 20px;
+  margin-top: 30px;
 }
 
 .content {
   text-align: center;
-  color: white;
 }
