--- a/frontend/src/components/signupLogin.module.css
+++ b/frontend/src/components/signupLogin.module.css
@@ -1,67 +1,50 @@
-.background {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: url('./stock_image.jpg') no-repeat center center fixed;
-  /* image source https://www.freepik.com/free-vector/global-business-background-with-stock-chart-blue-tone_16406606.htm */
-}
-
-.header {
-  font-size: 24px;
-  color: white;
-  margin-bottom: 20px;
-}
-
-.formLabel {
-  color: white;
 }
 
 .wrapper {
-  position: relative;
-  width: 400px;
-  height: 440px;
+  width: 368px;
+  height: 400px;
   background: transparent;
   border: 2px solid rgba(255,255,255,.5);
   border-radius: 20px;
   backdrop-filter: blur(20px);
   box-shadow: 0 0 30px rgba(0,0,0,.5);
   display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header {
+  font-size: 24px;
+  margin-bottom: 20px;
+  margin-top: 40px;
+}
+
+.buttonContainer {
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: flex;
-  flex-direction: column;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .prompt {
   text-align: center;
-  color: white;
   margin-top: 20px;
 }
 
 .promptText {
   margin-left: 30px;
   margin-right: 30px;
-  font-size: 24px;
-}
-
-.promptButton {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #0d6efd;
-  color: #fff;
-  text-decoration: none;
-  font-size: 15px;
-  border-radius: 5px;
-}
-
-.promptButton:hover {
-  background-color: #0b5ed7;
-  color: white;
+  font-size: 20px;
 }
 
 .reminder {
+  position: absolute;
   font-size: .875em;
-  color: silver;
 }
