--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .background {
-  background-image: url('./background.jpg');
+  background-image: url('./img/background.jpg');
   background-position: center;
   background-attachment: fixed;
 }
