--- a/frontend/src/components/Welcome.module.css
+++ b/frontend/src/components/Welcome.module.css
@@ -48,7 +48,6 @@
 }
 
 .featureSection {
-  font-size: 2rem;
   background-color: #333;
   color: white;
   display: flex;
@@ -67,7 +66,7 @@
 
 .card {
   height: 40%;
-  margin: 5rem;
+  margin: 5vw;
   box-shadow: 5px 5px 20px black;
   overflow: hidden;
 }
@@ -109,7 +108,7 @@
 }
 
 .smallIntro {
-  height: 70px;
+  /* height: 2vw; */
   width: 25%;
   padding: 6px;
   box-sizing: border-box;
@@ -120,7 +119,7 @@
 }
 
 .largeIntro {
-  height: 70px;
+  /* height: 70px; */
   width: 50%;
   padding: 6px;
   box-sizing: border-box;
