modified welcome page and added more unit tests

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,5 +10,5 @@ body {
 .background {
   background-image: url('./img/background.jpg');
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: scroll;
 }
